--- a/css/source/styles.css
+++ b/css/source/styles.css
@@ -24,8 +24,8 @@ body {
 .header-logo-wrapper {
     font-size: 16px;
     display: flex;
-    width: 34px;
-    height: 34px;
+    width: 36px;
+    height: 36px;
     padding: 0 9px 0 7px;
     cursor: default;
     text-align: center;
@@ -68,14 +68,11 @@ body {
 }
 
 .nav-compact-wrapper {
-    font-size: 24px;
-    line-height: 0;
+    font-size: 28px;
     display: none;
-    width: 22px;
-    height: 25px;
-    margin: 5px 3px 0 0;
     cursor: pointer;
     border-radius: 4px;
+    padding: 0px 10px 3px 10px;
 }
 
 .nav-compact-wrapper:active {
@@ -115,7 +112,7 @@ body {
 
 .popup-menu-wrapper {
     min-width: 100px;
-    margin: 30px 0 0 -78px;
+    margin: 30px 0 0 -100px;
 }
 
 /* [ul.styles] */
