--- a/css/app.css
+++ b/css/app.css
@@ -713,7 +713,7 @@ body {
 
 .popup-menu-wrapper {
     min-width: 100px;
-    margin: 30px 0 0 -100px;
+    margin: 35px 0px 0 -109px;
 }
 
 /* [ul.styles] */
