--- a/css/source/styles.css
+++ b/css/source/styles.css
@@ -44,7 +44,7 @@ body {
 
 .nav-item {
     font-weight: 400;
-    margin-right: 3px;
+    margin-left: 3px;
     padding: 6px 12px;
     cursor: pointer;
     border-radius: 4px;
@@ -57,6 +57,10 @@ body {
 
 .nav-item:active {
     color: #cbcbcb;
+}
+
+.menu-link-lmargin {
+    margin-left: 5px;
 }
 
 .nav-current {
@@ -72,7 +76,8 @@ body {
     display: none;
     cursor: pointer;
     border-radius: 4px;
-    padding: 0px 10px 3px 10px;
+    padding: 0px 8px;
+    margin-right: -8px;
 }
 
 .nav-compact-wrapper:active {
@@ -93,7 +98,7 @@ body {
     border-radius: 4px;
     background: #333;
     background-clip: padding-box;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, .15);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, .15);
 }
 
 .popup-item {
@@ -112,7 +117,7 @@ body {
 
 .popup-menu-wrapper {
     min-width: 100px;
-    margin: 35px 0px 0 -109px;
+    margin: 35px 0px 0 -99px;
 }
 
 /* [ul.styles] */
@@ -249,6 +254,11 @@ body {
     padding: 20px;
 }
 
+.a-unstyle {
+    color: inherit;
+    text-decoration: inherit;
+}
+
 /* [helper.styles] */
 .unselectable {
 
@@ -256,10 +266,11 @@ body {
     user-select: none;
 }
 
-.undraggable {
+/*.undraggable {*/
 
-    /* [source::credit](http://stackoverflow.com/questions/7439042/css-js-to-prevent-dragging-of-ghost-image) */
-}
+/* [source::credit](http://stackoverflow.com/questions/7439042/css-js-to-prevent-dragging-of-ghost-image) */
+
+/*}*/
 
 .hidden {
     display: none;
