--- a/css/app.css
+++ b/css/app.css
@@ -652,12 +652,12 @@ body {
 }
 
 .nav-item:hover {
-    color: #5f636a;
-    background: #eee;
+    color: #000000;
+    background: #F3F3F3;
 }
 
 .nav-item:active {
-    color: #cbcbcb;
+    color: #555555;
 }
 
 .menu-link-rmargin {
@@ -669,7 +669,8 @@ body {
 }
 
 .nav-current {
-    background: #eee;
+    background: #F3F3F3;
+    color: #4280eb !important;
 }
 
 .nav-expanded-wrapper {
@@ -722,7 +723,8 @@ body {
 
 .popup-menu-wrapper {
     min-width: 100px;
-    margin: 35px 0px 0 -107px;
+    margin-left: -105px;
+    margin-top: 7px;
 }
 
 /* [ul.styles] */
@@ -787,7 +789,6 @@ body {
     -ms-hyphens: auto;
     hyphens: auto;    /* [hyphen,word-break](https://justmarkup.com/log/2015/07/dealing-with-long-words-in-css/) */
     overflow-wrap: break-word;
-    font-family: Libre Franklin;
 }
 
 .message-text-workcallout {
@@ -834,7 +835,6 @@ body {
     margin-top: -44px;
     padding: 10px;
     color: #fff;
-    box-shadow: inset 10px -50px 17px -15px rgba(0, 0, 0, .6);
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-flow: row nowrap;
@@ -843,7 +843,11 @@ body {
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
-    justify-content: space-between;
+    justify-content: space-between;    /* [http://www.cssmatic.com/gradient-generator] */
+    background: rgba(255, 255, 255, 0);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, rgba(0, 0, 0, 0.8)));
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#000000', GradientType=0);
 }
 
 .project-name {
@@ -875,12 +879,32 @@ body {
     justify-content: center;
 }
 
+.footer-icon {
+}
+
 .contact-wrapper {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     margin-left: 15px;
+    padding: 5px 0;
+}
+
+.contact-text {
+    font-weight: 400;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .contact-logo-img {
@@ -889,9 +913,9 @@ body {
     margin: 5px 5px 0 0;
 }
 
-.contact-text {
-    font-weight: 400;
-    margin-top: 8px;
+.footer-icon {
+    font-size: 25px;
+    margin-right: 5px;
 }
 
 .contact-link {
@@ -906,7 +930,7 @@ body {
 
 .contact-link:hover {
     text-decoration: underline;
-    color: #08c;
+    color: #4280eb;
 }
 
 /* [position.styles] */
@@ -939,6 +963,18 @@ body {
 
 .hidden {
     display: none;
+}
+
+.flex {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
 }
 
 /* prevents the flex child items from collapsing on themselves  */
@@ -1119,6 +1155,13 @@ body {
 
     .nav-compact-wrapper {
         display: block;
+    }
+
+}
+
+@media screen and (min-width:500px) {
+    .hide500plus {
+        display: none;
     }
 
 }
