--- a/css/app.css
+++ b/css/app.css
@@ -763,14 +763,22 @@ body {
     padding-top: 10px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -webkit-flex-flow: row nowrap;
-    -ms-flex-flow: row nowrap;
-    flex-flow: row nowrap;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
 }
+
+/*.projects-wrapper {
+    display: flex;
+    width: 100%;
+    padding-top: 10px;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}*/
 
 /* [messages.styles] */
 .message-title {
@@ -799,23 +807,55 @@ body {
 
 /* [project.styles] */
 .project-item-wrapper {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+    width: calc(50% - 5px);
+    padding: 20px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    background: #f6f6f6;
+}
+
+.project-item-wrapper:hover {
+    box-shadow: inset 0px 0px 0px 2px #4280eb;
+    background: aliceblue;
+}
+
+.project-link {
+    text-decoration: inherit;
+    color: inherit;
+}
+
+.project-link:hover {
+    text-decoration: underline;
+    color: #4280eb;
+}
+
+.project-link:active {
+    color: #4280eb;
+}
+
+.project-title {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.project-description {
+    padding: 10px 0;
+    font-weight: normal;
+}
+
+.project-languages-wrapper {
+}
+
+/*.project-item-wrapper {
     display: flex;
     width: 100%;
     margin: 0 20px 30px 0;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-flow: column nowrap;
-    -ms-flex-flow: column nowrap;
     flex-flow: column nowrap;
 }
 
 .project-item-wrapper:last-of-type {
     margin-right: 0;
-}
-
+}*/
 .project-item-innerwrapper {
     overflow: hidden;
     border-radius: 7px;
@@ -843,11 +883,8 @@ body {
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
-    justify-content: space-between;    /* [http://www.cssmatic.com/gradient-generator] */
-    background: rgba(255, 255, 255, 0);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, rgba(0, 0, 0, 0.8)));
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#000000', GradientType=0);
+    justify-content: space-between;
+    background: rgba(0, 0, 0, 0.65);
 }
 
 .project-name {
@@ -857,6 +894,30 @@ body {
 
 .project-link-external {
     color: #fff;
+}
+
+.lang-wrapper {
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.lang-color-dot {
+    width: 12px;
+    height: 12px;
+    border-radius: 10px;
+    margin-right: 5px;
+}
+
+.lang-color-text {
+    font-weight: normal;
+    font-size: 14px;
 }
 
 /* [footer.styles] */
@@ -1086,9 +1147,19 @@ body {
 
 }
 
-/* [tablet - 768px] */
+@media screen and (max-width:810px) {
+    .project-item-wrapper {
+        width: 100%;
+    }
+
+}
+
 @media screen and (max-width:768px) {
     .position-center {
+        width: 100%;
+    }
+
+    .project-item-wrapper {
         width: 100%;
     }
 
@@ -1107,21 +1178,16 @@ body {
 }
 
 @media screen and (max-width:680px) {
-    .project-item-wrapper {
+
+    /*    .project-item-wrapper {
         width: 250px;
         margin-right: 0;
-    }
+    }*/
 
-    .projects-wrapper {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -webkit-flex-flow: row wrap;
-        -ms-flex-flow: row wrap;
+    /*    .projects-wrapper {
         flex-flow: row wrap;
-        -webkit-justify-content: space-around;
-        -ms-flex-pack: distribute;
         justify-content: space-around;
-    }
+    }*/
 
     .project-name {
         font-size: 14px;
@@ -1134,10 +1200,9 @@ body {
         width: 100%;
     }
 
-    .project-item-wrapper {
+    /*    .project-item-wrapper {
         width: 200px;
-    }
-
+    }*/
     .responsive-text-hideable {
         display: none;
     }
@@ -1145,10 +1210,10 @@ body {
 }
 
 @media screen and (max-width:500px) {
-    .project-item-wrapper {
-        width: 270px;
-    }
 
+    /*    .project-item-wrapper {
+        width: 270px;
+    }*/
     .nav-expanded-wrapper {
         display: none;
     }
@@ -1166,7 +1231,6 @@ body {
 
 }
 
-/* [mobile L - 425px] */
 @media screen and (max-width:425px) {
     .message-title {
         font-size: 27px;
@@ -1174,7 +1238,6 @@ body {
 
 }
 
-/* [mobile M - 375px] */
 @media screen and (max-width:375px) {
     .message-title {
         font-size: 25px;
@@ -1182,7 +1245,6 @@ body {
 
 }
 
-/* [mobile S - 320px] */
 @media screen and (max-width:320px) {
     .position-center {
         width: 300px;
