--- a/css/source/styles.css
+++ b/css/source/styles.css
@@ -147,9 +147,17 @@ body {
     display: flex;
     width: 100%;
     padding-top: 10px;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
 }
+
+/*.projects-wrapper {
+    display: flex;
+    width: 100%;
+    padding-top: 10px;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}*/
 
 /* [messages.styles] */
 .message-title {
@@ -175,6 +183,46 @@ body {
 
 /* [project.styles] */
 .project-item-wrapper {
+    width: calc(50% - 5px);
+    padding: 20px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    background: #f6f6f6;
+}
+
+.project-item-wrapper:hover {
+    box-shadow: inset 0px 0px 0px 2px #4280eb;
+    background: aliceblue;
+}
+
+.project-link {
+    text-decoration: inherit;
+    color: inherit;
+}
+
+.project-link:hover {
+    text-decoration: underline;
+    color: #4280eb;
+}
+
+.project-link:active {
+    color: #4280eb;
+}
+
+.project-title {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.project-description {
+    padding: 10px 0;
+    font-weight: normal;
+}
+
+.project-languages-wrapper {
+}
+
+/*.project-item-wrapper {
     display: flex;
     width: 100%;
     margin: 0 20px 30px 0;
@@ -183,8 +231,7 @@ body {
 
 .project-item-wrapper:last-of-type {
     margin-right: 0;
-}
-
+}*/
 .project-item-innerwrapper {
     overflow: hidden;
     border-radius: 7px;
@@ -202,15 +249,8 @@ body {
     padding: 10px;
     color: #fff;
     flex-flow: row nowrap;
-    justify-content: space-between;    /* [http://www.cssmatic.com/gradient-generator] */
-    background: rgba(255, 255, 255, 0);
-    background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, rgba(0, 0, 0, 0.8)));
-    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-    background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-    background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#000000', GradientType=0);
+    justify-content: space-between;
+    background: rgba(0, 0, 0, 0.65);
 }
 
 .project-name {
@@ -220,6 +260,24 @@ body {
 
 .project-link-external {
     color: #fff;
+}
+
+.lang-wrapper {
+    display: inline-flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.lang-color-dot {
+    width: 12px;
+    height: 12px;
+    border-radius: 10px;
+    margin-right: 5px;
+}
+
+.lang-color-text {
+    font-weight: normal;
+    font-size: 14px;
 }
 
 /* [footer.styles] */
@@ -400,9 +458,19 @@ body {
 
 }
 
-/* [tablet - 768px] */
+@media screen and (max-width:810px) {
+    .project-item-wrapper {
+        width: 100%;
+    }
+
+}
+
 @media screen and (max-width:768px) {
     .position-center {
+        width: 100%;
+    }
+
+    .project-item-wrapper {
         width: 100%;
     }
 
@@ -421,15 +489,16 @@ body {
 }
 
 @media screen and (max-width:680px) {
-    .project-item-wrapper {
+
+    /*    .project-item-wrapper {
         width: 250px;
         margin-right: 0;
-    }
+    }*/
 
-    .projects-wrapper {
+    /*    .projects-wrapper {
         flex-flow: row wrap;
         justify-content: space-around;
-    }
+    }*/
 
     .project-name {
         font-size: 14px;
@@ -442,10 +511,9 @@ body {
         width: 100%;
     }
 
-    .project-item-wrapper {
+    /*    .project-item-wrapper {
         width: 200px;
-    }
-
+    }*/
     .responsive-text-hideable {
         display: none;
     }
@@ -453,10 +521,10 @@ body {
 }
 
 @media screen and (max-width:500px) {
-    .project-item-wrapper {
-        width: 270px;
-    }
 
+    /*    .project-item-wrapper {
+        width: 270px;
+    }*/
     .nav-expanded-wrapper {
         display: none;
     }
@@ -474,7 +542,6 @@ body {
 
 }
 
-/* [mobile L - 425px] */
 @media screen and (max-width:425px) {
     .message-title {
         font-size: 27px;
@@ -482,7 +549,6 @@ body {
 
 }
 
-/* [mobile M - 375px] */
 @media screen and (max-width:375px) {
     .message-title {
         font-size: 25px;
@@ -490,7 +556,6 @@ body {
 
 }
 
-/* [mobile S - 320px] */
 @media screen and (max-width:320px) {
     .position-center {
         width: 300px;
