--- a/css/app.css
+++ b/css/app.css
@@ -584,10 +584,6 @@ body {
     margin: 0;
 }
 
-.ios-click-fix {
-    cursor: pointer;
-}
-
 /* [header.styles] */
 .header-wrapper {
     display: -webkit-box;
@@ -617,7 +613,7 @@ body {
     padding: 0 9px 0 7px;
     cursor: default;
     text-align: center;
-    color: #fff;    /* leaf  */
+    color: #fff;  /* leaf  */
     border-radius: 40px 100px 0 100px;
     background: #699935;
     -webkit-box-pack: center;
@@ -760,7 +756,6 @@ body {
     display: -ms-flexbox;
     display: flex;
     width: 100%;
-    padding-top: 10px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-flow: row wrap;
@@ -771,14 +766,6 @@ body {
     -ms-flex-pack: justify;
     justify-content: space-between;
 }
-
-/*.projects-wrapper {
-    display: flex;
-    width: 100%;
-    padding-top: 10px;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-}*/
 
 /* [messages.styles] */
 .message-title {
@@ -795,7 +782,7 @@ body {
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
-    hyphens: auto;    /* [hyphen,word-break](https://justmarkup.com/log/2015/07/dealing-with-long-words-in-css/) */
+    hyphens: auto;  /* [hyphen,word-break](https://justmarkup.com/log/2015/07/dealing-with-long-words-in-css/) */
     overflow-wrap: break-word;
 }
 
@@ -841,50 +828,6 @@ body {
 .project-description {
     padding: 10px 0;
     font-weight: normal;
-}
-
-.project-languages-wrapper {
-}
-
-/*.project-item-wrapper {
-    display: flex;
-    width: 100%;
-    margin: 0 20px 30px 0;
-    flex-flow: column nowrap;
-}
-
-.project-item-wrapper:last-of-type {
-    margin-right: 0;
-}*/
-.project-item-innerwrapper {
-    overflow: hidden;
-    border-radius: 7px;
-}
-
-.project-img {
-    display: block;
-    width: 100%;
-}
-
-.project-info-wrapper {
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    margin-top: -44px;
-    padding: 10px;
-    color: #fff;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-flow: row nowrap;
-    -ms-flex-flow: row nowrap;
-    flex-flow: row nowrap;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    background: rgba(0, 0, 0, 0.65);
 }
 
 .project-name {
@@ -940,9 +883,6 @@ body {
     justify-content: center;
 }
 
-.footer-icon {
-}
-
 .contact-wrapper {
     display: -webkit-box;
     display: -webkit-flex;
@@ -966,12 +906,6 @@ body {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-}
-
-.contact-logo-img {
-    width: 30px;
-    height: 30px;
-    margin: 5px 5px 0 0;
 }
 
 .footer-icon {
@@ -1042,9 +976,9 @@ body {
 .header-wrapper,
 .footer-wrapper {
 
-    /* [https://philipwalton.com/articles/normalizing-cross-browser-flexbox-bugs/] */
-
-    /* [https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/] */
+    /* [https://philipwalton.com/articles/normalizing-cross-browser-flexbox-bugs/]
+       [https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/]
+     */
     -webkit-flex-shrink: 0;
     -ms-flex-negative: 0;
     flex-shrink: 0;
@@ -1075,10 +1009,9 @@ body {
 
 /* [animation resources] */
 
-/* [source::api](http://www.w3schools.com/cssref/css3_pr_animation.asp) */
-
-/* [source](http://stackoverflow.com/questions/33835096/css-to-pan-background-image-back-and-forth) */
-
+/* [source::api](http://www.w3schools.com/cssref/css3_pr_animation.asp)
+   [source](http://stackoverflow.com/questions/33835096/css-to-pan-background-image-back-and-forth)
+*/
 .footer-animate {
     -webkit-animation-name: footer-animate;
     animation-name: footer-animate;
@@ -1134,7 +1067,7 @@ body {
 /* [media_queries.styles] */
 @media screen and (max-width:950px) {
     .position-center {
-        width: calc(100% - 100px);
+        width: 100%;
     }
 
     .message-title {
@@ -1147,6 +1080,18 @@ body {
 
 }
 
+@media screen and (min-width:811px) {
+
+    /* [http://stackoverflow.com/a/29771071]
+      selects the last child when odd or the last 2 children when there is an event amount of children
+      */
+    .project-item-wrapper:last-child,
+    .project-item-wrapper:nth-last-of-type(-n+2):not(:nth-child(even)) {
+        margin-bottom: 0;
+    }
+
+}
+
 @media screen and (max-width:810px) {
     .project-item-wrapper {
         width: 100%;
@@ -1155,10 +1100,6 @@ body {
 }
 
 @media screen and (max-width:768px) {
-    .position-center {
-        width: 100%;
-    }
-
     .project-item-wrapper {
         width: 100%;
     }
@@ -1178,17 +1119,6 @@ body {
 }
 
 @media screen and (max-width:680px) {
-
-    /*    .project-item-wrapper {
-        width: 250px;
-        margin-right: 0;
-    }*/
-
-    /*    .projects-wrapper {
-        flex-flow: row wrap;
-        justify-content: space-around;
-    }*/
-
     .project-name {
         font-size: 14px;
     }
@@ -1196,13 +1126,6 @@ body {
 }
 
 @media screen and (max-width:625px) {
-    .position-center {
-        width: 100%;
-    }
-
-    /*    .project-item-wrapper {
-        width: 200px;
-    }*/
     .responsive-text-hideable {
         display: none;
     }
@@ -1210,10 +1133,10 @@ body {
 }
 
 @media screen and (max-width:500px) {
+    .position-center {
+        padding: 15px;
+    }
 
-    /*    .project-item-wrapper {
-        width: 270px;
-    }*/
     .nav-expanded-wrapper {
         display: none;
     }
