--- a/source/css/app.css
+++ b/source/css/app.css
@@ -10,9 +10,12 @@
  */
 
 html {
-  line-height: 1.15; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  line-height: 1.15;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
 }
 
 /* Sections
@@ -35,6 +38,7 @@ section {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
+
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
@@ -51,7 +55,6 @@ h1 {
 figcaption,
 figure,
 main {
-
   /* 1 */
   display: block;
 }
@@ -59,6 +62,7 @@ main {
 /**
 * Add the correct margin in IE 8.
 */
+
 figure {
   margin: 1em 40px;
 }
@@ -67,19 +71,25 @@ figure {
 * 1. Add the correct box sizing in Firefox.
 * 2. Show the overflow in Edge and IE.
 */
+
 hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
 }
 
 /**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */
+
 pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
+  font: 1em monospace, monospace;
+  /* 1 */
+  /* 2 */
 }
 
 /* Text-level semantics
@@ -91,23 +101,30 @@ pre {
 */
 
 a {
-  background-color: transparent; /* 1 */
-  -webkit-text-decoration-skip: objects; /* 2 */
+  background: transparent;
+  /* 1 */
+  -webkit-text-decoration-skip: objects;
+  /* 2 */
 }
 
 /**
 * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
 * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 */
+
 abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  text-decoration: underline dotted;
+  /* 2 */
 }
 
 /**
 * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
 */
+
 b,
 strong {
   font-weight: inherit;
@@ -116,6 +133,7 @@ strong {
 /**
 * Add the correct font weight in Chrome, Edge, and Safari.
 */
+
 b,
 strong {
   font-weight: bolder;
@@ -125,16 +143,19 @@ strong {
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */
+
 code,
 kbd,
 samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
+  font: 1em monospace, monospace;
+  /* 1 */
+  /* 2 */
 }
 
 /**
 * Add the correct font style in Android 4.3-.
 */
+
 dfn {
   font-style: italic;
 }
@@ -142,14 +163,16 @@ dfn {
 /**
 * Add the correct background and color in IE 9-.
 */
+
 mark {
-  background-color: #ff0;
+  background: #ff0;
   color: #000;
 }
 
 /**
 * Add the correct font size in all browsers.
 */
+
 small {
   font-size: 80%;
 }
@@ -158,6 +181,7 @@ small {
 * Prevent `sub` and `sup` elements from affecting the line height in
 * all browsers.
 */
+
 sub,
 sup {
   font-size: 75%;
@@ -189,6 +213,7 @@ video {
 /**
 * Add the correct display in iOS 4-7.
 */
+
 audio:not([controls]) {
   display: none;
   height: 0;
@@ -197,6 +222,7 @@ audio:not([controls]) {
 /**
 * Remove the border on images inside links in IE 10-.
 */
+
 img {
   border-style: none;
 }
@@ -204,6 +230,7 @@ img {
 /**
 * Hide the overflow in IE.
 */
+
 svg:not(:root) {
   overflow: hidden;
 }
@@ -227,9 +254,9 @@ textarea {
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */
+
 button,
 input {
-
   /* 1 */
   overflow: visible;
 }
@@ -238,9 +265,9 @@ input {
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */
+
 button,
 select {
-
   /* 1 */
   text-transform: none;
 }
@@ -250,18 +277,19 @@ select {
 *    controls in Android 4.
 * 2. Correct the inability to style clickable types in iOS and Safari.
 */
+
 button,
 html [type="button"],
-
-/* 1 */
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button; /* 2 */
+  -webkit-appearance: button;
+  /* 2 */
 }
 
 /**
 * Remove the inner border and padding in Firefox.
 */
+
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -273,6 +301,7 @@ button::-moz-focus-inner,
 /**
 * Restore the focus styles unset by the previous rule.
 */
+
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
@@ -286,27 +315,38 @@ button:-moz-focusring,
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */
+
 legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
+  box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */
 }
 
 /**
 * 1. Add the correct display in IE 9-.
 * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */
+
 progress {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */
 }
 
 /**
 * Remove the default vertical scrollbar in IE.
 */
+
 textarea {
   overflow: auto;
 }
@@ -315,15 +355,19 @@ textarea {
 * 1. Add the correct box sizing in IE 10-.
 * 2. Remove the padding in IE 10-.
 */
+
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
 }
 
 /**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */
+
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
@@ -333,14 +377,18 @@ textarea {
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */
+
 [type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
 }
 
 /**
 * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
 */
+
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -350,9 +398,12 @@ textarea {
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */
+
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
 }
 
 /* Interactive
@@ -364,8 +415,6 @@ textarea {
 */
 
 details,
-
-/* 1 */
 menu {
   display: block;
 }
@@ -373,6 +422,7 @@ menu {
 /*
 * Add the correct display in all browsers.
 */
+
 summary {
   display: list-item;
 }
@@ -391,6 +441,7 @@ canvas {
 /**
 * Add the correct display in IE.
 */
+
 template {
   display: none;
 }
@@ -411,118 +462,145 @@ template {
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add box sizing inheritence in all browsers (opinionated).
  */
+
 *,
 ::before,
 ::after {
-    background-repeat: no-repeat; /* 1 */
-    box-sizing: inherit; /* 2 */
+  background-repeat: no-repeat;
+  /* 1 */
+  box-sizing: inherit;
+  /* 2 */
 }
 
 /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritence in all browsers (opinionated).
  */
+
 ::before,
 ::after {
-    text-decoration: inherit; /* 1 */
-    vertical-align: inherit; /* 2 */
+  text-decoration: inherit;
+  /* 1 */
+  vertical-align: inherit;
+  /* 2 */
 }
 
 /**
  * 1. Add border box sizing in all browsers (opinionated).
  * 2. Add the default cursor in all browsers (opinionated).
  */
+
 html {
-    box-sizing: border-box; /* 1 */
-    cursor: default; /* 2 */
+  box-sizing: border-box;
+  /* 1 */
+  cursor: default;
+  /* 2 */
 }
 
 /**
  * 1. Remove the margin in all browsers (opinionated).
  * 2. Use the system's available font. Sourced from [https://medium.design/system-shock-6b1dc6d6596f#.xts8r3m0i], [https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/], & [https://css-tricks.com/snippets/css/system-font-stack/] (opinionated).
  */
+
 body {
-    margin: 0; /* 1 */
-    color: #2d3c49;
-    font: 400 14px -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; /* 2 */
+  margin: 0;
+  /* 1 */
+  color: #2d3c49;
+  font: 400 14px -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  /* 2 */
 }
 
 /**
  * 1. Remove the default outline. Source [http://stackoverflow.com/questions/17324960/copy-chrome-default-inputs-outline-style] (opinionated).
  */
+
 :focus {
-    outline: none; /* 1 */
+  outline: none;
+  /* 1 */
 }
 
 /**
  * Remove the list style on navigation lists in all browsers (opinionated).
  */
+
 nav ol,
 nav ul {
-    list-style: none;
+  list-style: none;
 }
 
 /*
  * Remove the text shadow on text selections (opinionated).
  * 1. Restore the coloring undone by defining the text shadow (opinionated).
  */
+
 ::-moz-selection {
-    background-color: #b3d4fc; /* 1 */
-    color: #000000; /* 1 */
-    text-shadow: none;
+  background: #b3d4fc;
+  /* 1 */
+  color: #000000;
+  /* 1 */
+  text-shadow: none;
 }
 
 ::selection {
-    background-color: #b3d4fc; /* 1 */
-    color: #000000; /* 1 */
-    text-shadow: none;
+  background: #b3d4fc;
+  /* 1 */
+  color: #000000;
+  /* 1 */
+  text-shadow: none;
 }
 
 /*
  * Change the alignment on media elements in all browers (opinionated).
  */
+
 audio,
 canvas,
 iframe,
 img,
 svg,
 video {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 /**
  * Change the fill color to match the text color in all browsers (opinionated).
  */
+
 svg {
-    fill: currentColor;
+  fill: currentColor;
 }
 
 /**
  * Inherit styling in all browsers (opinionated).
  */
+
 button,
 input,
 select,
 textarea {
-    background-color: transparent;
-    color: inherit;
-    font-size: inherit;
-    line-height: inherit;
+  background: transparent;
+  color: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 /**
  * 1. Remove the default vertical scrollbar in IE.
  * 2. Change the resize direction on textareas in all browsers (opinionated).
  */
+
 textarea {
-    overflow: auto; /* 1 */
-    resize: vertical; /* 2 */
+  overflow: auto;
+  /* 1 */
+  resize: vertical;
+  /* 2 */
 }
 
 /*
  * Remove the tapping delay on clickable elements (opinionated).
  * 1. Remove the tapping delay in IE 10.
  */
+
 a,
 area,
 button,
@@ -532,38 +610,43 @@ select,
 summary,
 textarea,
 [tabindex] {
-    -ms-touch-action: manipulation; /* 1 */
-    touch-action: manipulation;
+  -ms-touch-action: manipulation;
+  /* 1 */
+  touch-action: manipulation;
 }
 
 /**
  * Change the cursor on busy elements (opinionated).
  */
+
 [aria-busy="true"] {
-    cursor: progress;
+  cursor: progress;
 }
 
 /*
  * Change the cursor on control elements (opinionated).
  */
+
 [aria-controls] {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /*
  * Change the display on visually hidden accessible elements (opinionated).
  */
+
 [aria-hidden="false"][hidden]:not(:focus) {
-    clip: rect(0, 0, 0, 0);
-    display: inherit;
-    position: absolute;
+  clip: rect(0, 0, 0, 0);
+  display: inherit;
+  position: absolute;
 }
 
 /*
  * Change the cursor on disabled, not-editable, or otherwise
  * inoperable elements (opinionated).
  */
+
 [aria-disabled] {
-    cursor: default;
+  cursor: default;
 }
 /* This is the only CSS file needed to be modified. Add your app styles here. */
